Feat: storage trie initialization (#281)
* feat: declare an interface from storage structure to transform it into database instructions

* Implement Nibbles (#252)

Implement a Nibble class and a BytesToNibbles iterable

* Introduce NodeHandle with primitive interface (#253)

* Transform trie_structure to database node operations (#255)

* Transform trie_structure to database node operations

* feat!: implement trie structure (#265)

In summary: 
* Nibble;
* Nibbles: a convenience representation for any "sequence of nibbles"-like data structure source;
* a small change in build.gradle.kts to enable preview features (we want the pattern matching in switch expressions/statements);
* the essential TrieStructure, including TrieNode, the various NodeHandles, etc.;
* TrieDotSerializer: a debugging helper for the trie, which serializes it to dot script for easier visualization with tools like GraphViz;
* tests for the TrieStructure;
* the `DecodedNode` DTO to use for outside population of the triestructure within `FullNode`.

---------

Co-authored-by: bokoto000 <bobivelkdev@gmail.com>
Co-authored-by: Viktor Todorov <viktor.todorov@limechain.tech>

* Persist trie nodes to database (#274)

* Trie initialization and storage (#276)

* Refactor full node trie load from genesis.

* Integrate db insertion.

* Fix some checkstyle.

* Fix some checkstyle.

* Fix InsertTrieNode arrays equality

* Address comments.

* Address comments.

---------

Co-authored-by: Мurаd Hаmzа <murad.hamza@limechain.tech>
Co-authored-by: bokoto000 <bobivelkdev@gmail.com>
Co-authored-by: Viktor Todorov <viktor.todorov@limechain.tech>
Co-authored-by: Stoyan Stoyanov <122104047+stoyan-lime@users.noreply.github.com>